@startuml diagramme_classes_ensemble_v2
!theme plain

' ============================================================
' CONFIGURATION GÉNÉRALE — palette de marque IAT Academy (navy/gold)
' ============================================================

skinparam dpi 300
skinparam shadowing false
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam linetype ortho

skinparam nodesep 24
skinparam ranksep 40

skinparam class {
    BackgroundColor White
    BorderColor #142B4B
    BorderThickness 1.2
    ArrowColor #142B4B
    ArrowThickness 1.3
    FontColor #142B4B
    FontStyle Bold
    AttributeFontColor #23282F
    AttributeFontStyle Normal
    AttributeFontSize 12
}

skinparam package {
    BackgroundColor #FFF8EC
    BorderColor #C97612
    BorderThickness 1.4
    FontColor #142B4B
    FontStyle Bold
    FontSize 13
}

skinparam title {
    FontColor #142B4B
    FontSize 20
    FontStyle Bold
}

skinparam note {
    BackgroundColor #FFF3D6
    BorderColor #C97612
    FontColor #23282F
    FontSize 10
}

title Diagramme de classes — Vue d'ensemble simplifiée (IAT Academy) — v2

' ============================================================
' CLASSE TECHNIQUE
' ============================================================

abstract class AuditableEntity {
  # createdAt : Instant
  # updatedAt : Instant
}

' ============================================================
' PAQUETAGES FONCTIONNELS (1 à 3 classes représentatives chacun)
' ============================================================

package "Utilisateurs & Groupes (3)" as PKG_USERS {
  class User {
    - id : UUID
    - fullName : String
    - role : Role
  }
  class LearnerGroup {
    - id : UUID
    - name : String
  }
}

package "Contenu pédagogique (6)" as PKG_CONTENU {
  class Formation {
    - id : UUID
    - title : String
  }
  class ModuleEntity {
    - id : UUID
    - title : String
    - orderIndex : int
    - yearNumber : Integer
    - ufCode : String
    - ufTitle : String
  }
  class Lesson {
    - id : UUID
    - title : String
    - orderIndex : int
  }
}

package "Évaluation (9)" as PKG_EVAL {
  class Quiz {
    - id : UUID
    - title : String
    - quizType : QuizType
    - ufCode : String
    - yearNumber : Integer
  }
  class QuizAttempt {
    - id : UUID
    - score : BigDecimal
    - status : AttemptStatus
  }
}

package "Stage & Certification (4)" as PKG_STAGE {
  class LearnerUfValidation {
    - id : UUID
    - ufCode : String
    - validated : boolean
  }
  class Certificate {
    - id : UUID
    - verificationCode : String
  }
}

package "Communication (5)" as PKG_COMM {
  class Conversation {
    - id : UUID
    - type : ConversationType
  }
  class Notification {
    - id : UUID
    - title : String
  }
}

package "Marketing & Emploi (5)" as PKG_MARKETING {
  class EmailCampaign {
    - id : UUID
    - subject : String
  }
  class JobOffer {
    - id : UUID
    - title : String
  }
}

package "Médias (3)" as PKG_MEDIAS {
  class Asset {
    - id : UUID
    - filename : String
  }
}

package "Système (4)" as PKG_SYSTEME {
  class AuditLogEntry {
    - id : UUID
    - action : String
  }
}

' ============================================================
' NOTES — les points à ne jamais oublier de mentionner à l'oral
' ============================================================

note top of ModuleEntity
  IMPORTANT — Année et UF ne sont PAS des tables séparées.
  Ce sont deux simples colonnes de ModuleEntity :
  · yearNumber (Integer, 1 ou 2)
  · ufCode (String libre, ex. "UF 5") — partagé par
    plusieurs modules, sans contrainte de clé étrangère.
  Une "UF" = tous les modules qui ont le même ufCode.
end note

note bottom of Quiz
  Quiz a 4 portées différentes (QuizType), chacune
  accrochée différemment (voir Quiz.java) :
  · APPLICATIF  -> lesson_id (FK)
  · FIN_MODULE  -> module_id (FK)
  · FIN_UF      -> ufCode (String, jointure par valeur)
  · FIN_ANNEE   -> yearNumber (Integer)
end note

note right of LearnerGroup
  group = null  -> apprenant 100% en ligne
                   (déblocage séquentiel automatique par UF)
  group ≠ null  -> apprenant hybride
                   (déblocage piloté par le Directeur via
                   GroupContentAssignment, pas de séquentiel auto)
end note

note bottom of JobOffer
  Dépendance de service RÉELLE, pas une simple convention UML :
  JobOfferService.listForLearner() calcule
  isAlumni = certificateRepository.findByUserIdAndFormationId(...)
             .isPresent()
  Le Javadoc de la classe précise : "alumni n'est pas un champ
  dédié sur User, c'est dérivé de l'existence d'un Certificate"
  — jamais d'état dupliqué qui pourrait diverger de la réalité.
end note

' ============================================================
' DISPOSITION EN GRILLE — sans rapport avec le modèle métier
' ============================================================

PKG_USERS -[hidden]right- PKG_CONTENU
PKG_CONTENU -[hidden]right- PKG_EVAL
PKG_USERS -[hidden]down- PKG_STAGE
PKG_STAGE -[hidden]right- PKG_COMM
PKG_COMM -[hidden]right- PKG_MARKETING
PKG_STAGE -[hidden]down- PKG_MEDIAS
PKG_MEDIAS -[hidden]right- PKG_SYSTEME

' ============================================================
' HÉRITAGE TECHNIQUE
' ============================================================

AuditableEntity <|-- User
AuditableEntity <|-- LearnerGroup
AuditableEntity <|-- Formation
AuditableEntity <|-- ModuleEntity
AuditableEntity <|-- Lesson
AuditableEntity <|-- Quiz
AuditableEntity <|-- QuizAttempt
AuditableEntity <|-- LearnerUfValidation
AuditableEntity <|-- Certificate
AuditableEntity <|-- Conversation
AuditableEntity <|-- Notification
AuditableEntity <|-- EmailCampaign
AuditableEntity <|-- JobOffer
AuditableEntity <|-- Asset
AuditableEntity <|-- AuditLogEntry

' ============================================================
' RELATIONS PRINCIPALES ENTRE PAQUETAGES — toutes nommées
' ============================================================

User "0..N" -- "0..1" LearnerGroup : appartient à

Formation "1" *-- "0..N" ModuleEntity : structure en
ModuleEntity "1" *-- "0..N" Lesson : découpe en

Lesson "0..1" -- "0..N" Quiz : peut être évaluée par
User "1" -- "0..N" QuizAttempt : tente
Quiz "1" -- "0..N" QuizAttempt : génère des tentatives de

User "1" -- "0..N" LearnerUfValidation : obtient une validation de
User "1" -- "0..N" Certificate : se voit délivrer
Formation "1" -- "0..N" Certificate : délivre

LearnerGroup "0..1" -- "0..N" Conversation : héberge un salon de
User "1" -- "0..N" Notification : reçoit

LearnerGroup "0..1" -- "0..N" EmailCampaign : cible
JobOffer ..> Certificate : vérifie l'éligibilité (statut alumni)

User ..> Asset : consulte / télécharge

User "0..1" -- "0..N" AuditLogEntry : trace les actions de

@enduml
